--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/typeorm": "^10.0.1",
